# Narcotix

./: .gitignore  ;  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.bak  LATEST  README.md  compile_commands.json  makefile  test.ncx
html/: animation_8c.html  animation_8h.html  animation_8h_source.html  annotated.html  classes.html  context_8c.html  context_8h.html  context_8h_source.html  dir_097f9cd1724f7204c0b11f995b3d66df.html  dir_2ca85aa3edcb5344e274ce267704e268.html  dir_47793cb3cd37c14550ad429b426ffbee.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_524400c5a26e63bcb0fb13d04bbb2228.html  dir_5ec8ef72743c4e49b4429155f183ef89.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9bdd7b4062f06e675179c67278c73757.html  dir_aed812316343037f9c95f919554858d6.html  dir_b89ce972468c918a122a129323f275f6.html  dir_c5c81eb51ae22dae88028d9dccbe7e97.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f488c511561d1779081e43357a44a136.html  file_8c.html  file_8h.html  file_8h_source.html  files.html  font_8c.html  font_8h.html  font_8h_source.html  functions.html  functions_vars.html  gl_8c.html  gl_8h_source.html  globals.html  globals_a.html  globals_defs.html  globals_defs_a.html  globals_defs_g.html  globals_defs_k.html  globals_defs_n.html  (+129 more)
include/: paths.h  rose_petal.h  test_paths.h
latex/: animation_8h_source.tex  annotated.tex  context_8h_source.tex  file_8h_source.tex  files.tex  font_8h_source.tex  gl_8h_source.tex  helpers_8h_source.tex  ivec2_8h_source.tex  khrplatform_8h_source.tex  light__point_8h_source.tex  mat4_8h_source.tex  material_8h_source.tex  md_README.tex  mesh_8h_source.tex  model_8h_source.tex  quat_8h_source.tex  ray_8h_source.tex  refman.tex  render__buffer_8h_source.tex  shader_8h_source.tex  sound_8h_source.tex  stb__image_8h_source.tex  structncx__anim.tex  structncx__anim__channel.tex  structncx__char.tex  structncx__font.tex  structncx__ivec2.tex  structncx__light__point.tex  structncx__mat4.tex  structncx__material.tex  structncx__material__data.tex  structncx__mesh.tex  structncx__model.tex  (+14 more)
src/: bone.c  (+29 more)
(+156 files in other folders)
